@@ -212,7 +212,6 @@ void Combat_schedule::approach_foe
 	if (!opponent && !(opponent = find_foe()))
 		{
 		failures++;
-		npc->set_action(new Null_action());
 		npc->start(200, 200);	// Try again in 1/5 sec.
 		return;			// No one left to fight.
 		}
@@ -250,7 +249,6 @@ void Combat_schedule::approach_foe
 				pos, opponent->get_abs_tile_coord(), &cost))
 			{
 			delete path;	// Really failed.  Try again in .5 sec.
-			npc->set_action(new Null_action());
 			npc->start(200, 500);
 			failures++;
 			return;
@@ -333,7 +331,6 @@ void Combat_schedule::start_strike
 			if (Swap_weapons(npc))
 				set_weapon_info();
 			state = approach;
-			npc->set_action(new Null_action());
 			npc->start(200, 500);
 			return;
 			}
@@ -502,7 +499,6 @@ void Combat_schedule::now_what
 		return;
 	if (npc->get_flag(Obj_flags::asleep))
 		{
-		npc->set_action(new Null_action());
 		npc->start(200, 1000);	// Check again in a second.
 		return;
 		}
@@ -553,7 +549,6 @@ void Combat_schedule::now_what
 				}
 			}
 		state = approach;
-		npc->set_action(new Null_action());
 		npc->start(200);	// Back into queue.
 		break;
 	case fire:			// Range weapon.
@@ -579,7 +574,6 @@ void Combat_schedule::now_what
 			gwin->add_effect(new Projectile_effect(npc, opponent,
 				ashape, weapon_shape));
 		state = approach;
-		npc->set_action(new Null_action());
 		npc->start(200);	// Back into queue.
 		break;
 		}
